[project]
name = "wnix"
version = "0.0.9"
authors = [
  { name="Jason Wilkes", email="notarealdeveloper@gmail.com" },
]
description = "Unix coreutils for software 2.0"
dependencies = [
    "pytest",
    "pandas",
    "is_instance",
    "assure",
    "mmry >= 0.0.4",
    "drivers >= 0.0.5",
    "embd >= 0.0.7",
]

# For including the non-python files in the installed repo
[tool.setuptools.package-data]
wnix = ["**/*"]

[project.urls]
"Homepage" = "https://github.com/notarealdeveloper/wnix"

[project.scripts]
what = "wnix.bin.what:main"
grep2 = "wnix.bin.grep:main"
