[project]
name = "wnix"
version = "0.0.15"
authors = [
  { name="Jason Wilkes", email="notarealdeveloper@gmail.com" },
]
description = "Unix coreutils for software 2.0"
dependencies = [
    "pytest",
    "pandas",
    "is_instance",
    "assure",
    "mmry >= 0.0.5",
    "kern >= 0.0.6",
    "embd >= 0.1.2",
]

# For including the non-python files in the installed repo
[tool.setuptools.package-data]
wnix = ["**/*"]

[project.urls]
"Homepage" = "https://github.com/notarealdeveloper/wnix"

[project.scripts]
what  = "wnix.bin.what:main"
grep2 = "wnix.bin.grep:main"
sort2 = "wnix.bin.sort:main"
