[project]
name = "wnix"
version = "0.0.20"
authors = [
  { name="Jason Wilkes", email="notarealdeveloper@gmail.com" },
]
description = "Unix coreutils for software 2.0"
dependencies = [
    "pytest",
    "pandas",
    "is_instance",
    "assure",
    "mmry",
    "embd",
    "kern",
]

# For including the non-python files in the installed repo
[tool.setuptools.package-data]
wnix = ["**/*"]

[project.urls]
source = "https://github.com/notarealdeveloper/wnix"

[project.scripts]
what  = "wnix.bin.what:main"
grep2 = "wnix.bin.grep:main"
sort2 = "wnix.bin.sort:main"
man2  = "wnix.bin.man:main"
cat2  = "wnix.bin.cat:main"
