[metadata]
name = wnix
version = 0.1
url = https://github.com/notarealdeveloper/wnix
author = Jason Wilkes
author_email = notarealdeveloper@gmail.com

[options]
package_dir=
    =src
packages = find:
install_requires =
    numpy
    fleep
    pypdf
    sentence_transformers

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    input  = wnix.bin.input:main
    think  = wnix.bin.think:main
    output = wnix.bin.output:main
