[metadata]

# lib
[options]
package_dir=
    =src
packages = find:
install_requires =
    fleep
    numpy
    Pillow
    pypdf
    sentence_transformers
    transformers

# etc
zip_safe = True
include_package_data = True

# lib
[options.packages.find]
where = src

# etc
[options.package_data]
wnix = etc/*
* = README.md

# bin
[options.entry_points]
console_scripts =
    input       = wnix.bin.input:main

    input-pdf   = wnix.bin.input.pdf:main
    input-image = wnix.bin.input.image:main
    input-url   = wnix.bin.input.url:main
    input-html  = wnix.bin.input.html:main

    pdf         = wnix.bin.input.pdf:main
    image       = wnix.bin.input.image:main
    url         = wnix.bin.input.url:main
    html        = wnix.bin.input.html:main

    think       = wnix.bin.middle.think:main

    output      = wnix.bin.output:main

